--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@blocknote/mantine": "^0.46.2",
     "@hello-pangea/dnd": "^16.6.0",
     "@hookform/resolvers": "^3.10.0",
+    "@instantdb/react": "^0.22.123",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -77,6 +78,7 @@
     "@types/node": "^22.16.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
+    "@vitejs/plugin-react": "^4.7.0",
     "@vitejs/plugin-react-swc": "^3.11.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.32.0",
